[gd_scene load_steps=5 format=3 uid="uid://sx2vu5toldhl"]

[ext_resource type="Script" uid="uid://bxenqt08r8gvw" path="res://scripts/ui/main_menu.gd" id="1_sl1te"]
[ext_resource type="Theme" uid="uid://epd3h3ptpsir" path="res://assets/theme.tres" id="2_fe2o3"]

[sub_resource type="LabelSettings" id="LabelSettings_87aya"]
line_spacing = -22.0
font_size = 72

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fe2o3"]
bg_color = Color(0.294188, 0.655352, 0.752429, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sl1te")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 31

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "The Adventures
of
Weffy & Wumby"
label_settings = SubResource("LabelSettings_87aya")
horizontal_alignment = 1

[node name="Button" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_fe2o3")
theme_override_font_sizes/font_size = 37
theme_override_styles/hover = SubResource("StyleBoxFlat_fe2o3")
text = "Start Game"

[node name="QuitToDesktopButton" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_fe2o3")
theme_override_font_sizes/font_size = 37
text = "Quit to Desktop"

[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/QuitToDesktopButton" to="." method="_on_quit_to_desktop_button_pressed"]
